Bug 1139907: show WebRTC screen sharing notification icon in Hello conversation window and globally when tab sharing is active. r=jesup,florian, a=lsblakk